--- a/proyecto/static/css/productos.css
+++ b/proyecto/static/css/productos.css
@@ -11,7 +11,7 @@ body {
     padding: 12px 20px 12px 40px;
 }
 
-img {
+.imagenProd {
     width: 150px;
     height: 150px;
     object-fit: cover;
@@ -40,12 +40,34 @@ img {
     position: relative;
 }
 
-.grid .item img {
+.grid .item .imagenProd {
     width: 100%;
     border-radius: 3%;
     cursor: pointer;
     vertical-align: top;
 }
+
+
+.datoProductoMiniatura {
+    border-radius: 5.5%;
+    position: absolute;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
+    color: #f1f1f1; /* Grey text */
+    width: 40%; /* Full width */
+    height: 100%;
+    padding: 5% 5% 5%; /* Some padding */
+    font-size: 70%;
+    text-align: center;
+}
+
+#cantidadesDisponibles {
+    /*position: -webkit-sticky;*/
+    /*top:60%;*/
+    margin-top: 37.5%;
+    font-size: xx-small;
+}
+
 
 /* overlay */
 
@@ -58,60 +80,21 @@ img {
     background: rgba(0, 0, 0, 0.85);
     width: 100%;
     height: 100%;
-    display: none;
+    display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.overlay img {
-    width: 100%;
-    height: 400px;
-    border-radius: 3%;
-}
-
-.overlay #actualizar {
-    width: 50%;
-    margin-top: 10px;
-    opacity: 70%;
-    float: left;
-}
-
-.overlay a:link {
-    color: white;
-    text-decoration: none;
-}
-
-.overlay a:visited {
-    color: white;
-    text-decoration: none;
-}
-
-.overlay #eliminar {
-    width: 50%;
-    margin-top: 10px;
-    opacity: 70%;
-    float: right;
-}
-
-.overlay #actualizarEmpleado {
-    width: 50%;
-    height: 44px;
-    margin-top: 10px;
-    opacity: 70%;
-    text-align: center;
-}
-
-#number::-webkit-inner-spin-button {
-    opacity: 1;
-}
-
-.overlay.mostrar {
-    display: flex;
 }
 
 .contenedor-img {
     position: relative;
     width: 50%;
+}
+
+#overlay img {
+    object-fit: cover;
+    width: 100%;
+    height: 400px;
+    border-radius: 3%;
 }
 
 .overlay #boton-cerrar {
@@ -125,6 +108,98 @@ img {
     top: -20px;
 }
 
+/*actualizar producto*/
+.overlay .datoProducto {
+    border-radius: 2%;
+    position: absolute;
+    bottom: 47px;
+    /*background: rgba(95, 95, 95, 0.8);*/
+    background: rgba(41, 43, 44, 0.9);
+    color: rgb(120, 120, 120);
+    font-weight: bolder;
+    width: 100%;
+    height: 89.5%;
+    padding: 3% 10% 20% 10%;
+    text-align: left;
+}
+
+.overlay h4 {
+    color: white;
+    text-align: center;
+    margin-bottom: -3%;
+}
+
+.overlay .inputs {
+    border: none;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.65);
+    background: transparent;
+    outline: none;
+    height: 40px;
+    text-align: center;
+    font-size: 16px;
+    font-style: italic;
+    color: white;
+    width: 78%;
+    margin-bottom: 20px;
+    margin-left: 12%;
+    display: block;
+}
+
+
+.overlay #actualizar {
+    width: 50%;
+    margin-top: 10px;
+    opacity: 70%;
+    float: left;
+}
+
+.overlay #eliminar {
+    width: 50%;
+    margin-top: 10px;
+    opacity: 70%;
+    float: right;
+}
+
+
+/*venta de productos*/
+
+
+.overlay .ventas {
+    margin-top: 5%;
+    text-align: left;
+    color: rgb(120, 120, 120);
+    font-size: 16px;
+
+}
+
+
+.overlay #cod {
+    color: white;
+    text-align: center;
+}
+
+.overlay .boton {
+    width: 125%;
+    /*margin-top: 3%;*/
+    opacity: 70%;
+    margin-left: -12.5%;
+}
+
+.overlay .bt {
+    width: 0;
+    border: none;
+    background-color: rgba(95, 95, 95, 0);
+}
+
+
+.overlay .label {
+    color: white;
+    font-style: italic;
+    font-weight: normal;
+    text-align: center;
+}
+
+
 /* pantalla pequeña */
 @media screen and (max-width: 1100px) {
     img {
@@ -136,35 +211,53 @@ img {
         margin: 2px;
         font-size: 90%;
     }
+
+
 }
 
 
-.contenido {
- 	border-radius: 5.5%;
-	position: absolute;
-	bottom: 0;
-	background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
-	color: #f1f1f1; /* Grey text */
-	width: 40%; /* Full width */
-	height: 100%;
-	padding: 5% 5% 5%; /* Some padding */
-	font-size: 70%;
-	text-align: center;
-}
-#disponibles {
-	margin-top: 37.5%;
-	font-size: xx-small;
-}
-#disponible {
+/*otros*/
+
+/*autofill*/
+input:-webkit-autofill {
+    transition: background-color 5000s ease-in-out 0s;
+    -webkit-text-fill-color: white !important;
 }
 
-.contenido1 {
-    border-radius: 3%;
-    position: absolute;
-    bottom: 47px;
-    background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
-    color: #f1f1f1;
-    width: 100%;
-    padding: 20px 20px 0px 20px;
+/*flechas de aumentar/diminuir valores */
+input[type=number]::-webkit-inner-spin-button {
+    opacity: 0.5;
+}
+
+/*texto de valores*/
+#cantidad,
+#valor {
+    padding-left: 9px;
+}
+
+/*adjuntar imagen*/
+.custom-file-input ~ .custom-file-label::after {
+    display: none;
+    margin-top: 5px;
+}
+
+.custom-file-label {
+    text-align: center;
+    font-size: 12px;
+    font-weight: bold;
+    color: black !important;
+    height: 72% !important;
+    width: 45%;
+    border: none !important;
+    background-color: rgba(255, 255, 255, 0.3) !important;
+    left: 27.5% !important;
+
+}
+
+/*pantalla pequeña*/
+@media screen and (max-width: 800px) {
+    .datoProductoMiniatura {
+        width: 60%; /* Full width */
+    }
 }
 
