--- a/proyecto/static/css/registro.css
+++ b/proyecto/static/css/registro.css
@@ -44,10 +44,7 @@ h2 {
 	margin-bottom: 15px;
 	text-align: center;
 }
-input:-webkit-autofill,
-input:-webkit-autofill:hover,
-input:-webkit-autofill:focus,
-input:-webkit-autofill:active {
+input:-webkit-autofill {
 	transition: background-color 5000s ease-in-out 0s;
 }
 
