--- a/proyecto/templates/actualizarProducto.html
+++ b/proyecto/templates/actualizarProducto.html
@@ -1,55 +1,147 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <title>Actualizar Producto </title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/actualizarProducto.css') }}"/>
-    <script src="{{ url_for('static', filename='js/validaciones.js') }}"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Actualizar Producto</title>
 
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/productos.css') }}">
 
     <!-- Bootstrap-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
           integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <!--iconos -->
+    <script src="https://kit.fontawesome.com/2c36e9b7b1.js"></script>
+    <link rel="shortcut icon" type="image/png" href="{{ url_for('static', filename='img/favicon.png') }}">
+
+    <!-- Muuri/Filtros -->
+    <script src="https://cdn.jsdelivr.net/npm/web-animations-js@2.3.2/web-animations.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/muuri@0.9.3/dist/muuri.min.js"></script>
 
 </head>
 
-<body class="bg-gradient-warning">
-
 <!-- Barra Principal -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="{{ url_for('productos') }}">La Cafetería</a>
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <h1><span><a class="navbar-brand">La Cafetería</a></span></h1>
+
+    <form class="form-inline mr-auto" onsubmit="return false">
+        <div class="input-group">
+            <input type="text" id="buscarProducto" class="form-control bg-light small" placeholder="Buscar producto..."
+                   aria-label="Search" aria-describedby="basic-addon2" onkeyup="filtrar(this);">
+        </div>
+    </form>
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse " id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+            <a class="nav-link">Nuevo Producto</a>
+            <a class="nav-link">Nuevo Usuario</a>
+            <a class="nav-link">Cerrar Sesión</a>
+        </ul>
     </div>
+
 </nav>
 
-<!-- Caja de Inicio -->
-<div class="recovery-box">
-    <img class="logo">
-    <h2>Actualizar Producto Ref # </h2>
-    <!-- Formulario -->
-    <form method="POST" action="{{ url_for('actualizarProducto') }}" onsubmit="actualizarProducto();"> <!-- validar formlario-->
 
-        <div class="form-group">
-            <input type="text" class="inputs" id="usuario" required placeholder="" name="actualizar">
-            <input type="number" min="0" step="1" class="inputs" id="cantidad" required
-                   placeholder="Actualizar Cantidades">
-            <input type="number" min="0" step="100" class="inputs" id="valor" required placeholder="Actualizar Valor">
+<div class="container " id="filtros">
+    <br>
+    <a href="#" class="btn btn-secondary btn-icon-split bg-dark ">Todos</a>
+    <a href="#" class="btn btn-secondary btn-icon-split ">Café</a>
+    <a href="#" class="btn btn-secondary btn-icon-split">Frappuccino</a>
+    <a href="#" class="btn btn-secondary btn-icon-split">Panadería</a>
+    <a href="#" class="btn btn-secondary btn-icon-split">Sandwiches</a>
+    <hr>
+</div>
+<br>
 
-            <div class="custom-file mb-3">
-                <input type="file" class="custom-file-input" id="customFile" name="filename" multiple lang='es'>
-                <label class="custom-file-label bg-dark" for="customFile">Actualizar Imagenes</label>
+<div class="container">
+
+    <!-- Grid de imagenes -->
+    <section class="grid" id="grid1">
+        {% if referencias %}
+        {% for i in range(imagenes | length) %}
+
+        <div class="item" data-categoria="{{ referencias[i] | lower }}"
+             data-etiquetas="{{ referencias[i] | lower }}{{ nombre[i] | lower }}"
+             data-descripcion="1.- Lorem ipsum dolor sit amet consectetur.">
+            <div class="item-contenido">
+                <input type="image" src="{{ imagenes[i] }}" alt="Submit Form" class="imagenProd" id={{i-1}}/>
+
+                <div class="datoProductoMiniatura">
+                    <p>{{ nombre[i] }}</p>
+                    <p id="cantidadesDisponibles">Cantidades disponibles: <br>
+                        <i style="font-size: small;">{{ cantidad[i] }}</i>
+                    </p>
+                </div>
             </div>
         </div>
 
-        <!-- Actualizar Producto -->
-        <input class="actualizar" id="actualizar" type="submit" value="Actualizar producto">
+        {% endfor %}
+        {% endif %}
 
-    </form>
+    </section>
+
+    <!-- Overlay de imagen -->
+    <section class="overlay" id="overlay">
+        <div class="contenedor-img">
+            <form method="POST" action="{{ url_for('actualizarProducto') }}"
+                  onsubmit="alert('Información de {{nombreActualizar}} fue actualizada satisfactoriamente')"
+                  enctype="multipart/form-data">
+                <img src="{{imagenActualizar}}" alt="">
+                <div class="datoProducto">
+                    <h4>Código de Referencia: <br>{{referenciaActualizar}}</h4> <br>
+
+                    <input type="hidden" name="referenciaActualizar" class="inputs" value="{{referenciaActualizar}}">
+                    <label>Nombre del Producto</label>
+                    <input type="text" class="inputs" name='nombreActualizar' class="inputs" required
+                           value='{{nombreActualizar}}'>
+                    <label>Cantidades Disponibles</label>
+                    <input type="number" min="0" step="1" class=" inputs" name='cantidadActualizar' required
+                           value="{{cantidadActualizar}}" id="cantidad">
+                    <label>Precio</label>
+                    <input type="number" min="0" step="100" class="inputs" name='precioActualizar' required
+                           value="{{valorActualizar}}" id="valor">
+                    <div class="custom-file mb-3">
+                        <input type="file" class="custom-file-input" id="escogerImagen" name="imagen"
+                               accept="image/gif, image/jpeg, image/png, image/jpg" value=""
+                               onchange="infoImagen(this);">
+                        <label class="custom-file-label " for="escogerImagen" id="escogerImagen-label">Nueva
+                            Imagen</label>
+                        <input type="hidden" name="noImagen" value="{{imagenActualizar}}">
+                    </div>
+
+                </div>
+
+                <a id="boton-cerrar" href="{{url_for('productos')}}"><i class="fas fa-times"></i></a>
+
+                <!-- actualizar/eliminar -->
+
+                <input class="btn btn-dark" id="actualizar" type="submit" value="Actualizar">
+            </form>
+
+            <form method="POST" action="{{ url_for('actualizarProducto') }}"
+                  onsubmit="return confirm('¿Esta seguro en eliminar a {{nombreActualizar}}?')">
+                <input type="hidden" name="referenciaActualizar" value="{{referenciaActualizar}}">
+                <input class="btn btn-dark boton" id="eliminar" type="submit" value="Eliminar" name="eliminar">
+            </form>
+        </div>
+    </section>
 </div>
+<!-- Jquery/Bootstrap js para el menu hamburgesa navbar-->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+
+<script src="{{ url_for('static', filename='js/productos.js') }}"></script>
+
+
 </body>
 
 </html>
-
-
 
