--- a/proyecto/templates/crearProducto.html
+++ b/proyecto/templates/crearProducto.html
@@ -4,13 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Nuevo Producto </title>
-    <link rel="stylesheet" href="{{ url_for("static", filename="css/crearProducto.css") }}"/>
-    <script src={{ url_for("static", filename="js/validaciones.js") }}></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/crearProducto.css') }}">
+    <script src="{{ url_for('static', filename='js/validaciones.js') }}"></script>
 
 
     <!-- Bootstrap-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
           integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
+    <!-- iconos -->
+    <link rel="shortcut icon" type="image/png" href="{{ url_for('static', filename='img/favicon.png') }}">
 
 </head>
 
@@ -18,7 +21,7 @@
 
 <!-- Barra Principal -->
 <nav class="navbar navbar-expand-lg  py-0 navbar-dark bg-dark">
-    <h1><span><a class="navbar-brand" href="{{ url_for("productos") }}">La Cafetería</a></span></h1>
+    <h1><span><a class="navbar-brand" href="{{ url_for('productos') }}">La Cafetería</a></span></h1>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,8 +30,8 @@
 
     <div class="collapse navbar-collapse " id="navbarNav">
         <ul class="navbar-nav ml-auto">
-            <a class="nav-link" href="{{ url_for("registro") }}">Nuevo Usuario</a>
-            <a class="nav-link" href="{{ url_for("cerrarSesion") }}">Cerrar Sesión</a>
+            <a class="nav-link" href="{{ url_for('registro') }}">Nuevo Usuario</a>
+            <a class="nav-link" href="{{ url_for('cerrarSesion') }}">Cerrar Sesión</a>
         </ul>
     </div>
 
@@ -40,7 +43,8 @@
     <h2>Nuevo Producto </h2>
 
     <!-- Formulario -->
-    <form method="POST" action="{{ url_for("crearProducto") }}" onsubmit="crearProducto();" enctype="multipart/form-data">
+    <form method="POST" action="{{ url_for('crearProducto') }}" onsubmit="crearProducto();"
+          enctype="multipart/form-data">
         <!-- validar formlario-->
 
         <div class="form-group">
@@ -48,17 +52,19 @@
             <input type="text" class="inputs" id="usuario" required placeholder="Nombre del Producto" name="nombre">
             <input type="number" min="0" step="1" class="inputs" id="cantidad" required placeholder="Cantidad Inicial"
                    name="cantidad">
-            <input type="number" min="0" step="100" class="inputs" id="valor" required placeholder="Valor" name="valor">
+            <input type="number" min="0" step="100" class="inputs" id="valor" required placeholder="Precio"
+                   name="valor">
 
             <div class="custom-file mb-3">
-                <input type="file" class="custom-file-input" id="customFile" name="imagen"
-                       accept="image/gif, image/jpeg, image/png, image/jpg">
-                <label class="custom-file-label bg-dark" for="customFile">Escoger Imagenes</label>
+                <input type="file" class="custom-file-input" id="escogerImagen" name="imagen"
+                       accept="image/gif, image/jpeg, image/png, image/jpg" value="" onchange="infoImagen(this);">
+                <label class="custom-file-label" for="escogerImagen" id="escogerImagen-label">Escoger
+                    Imagen</label>
             </div>
         </div>
 
         <!-- Crear Producto -->
-        <input class="crear" id="crear" type="submit" value="Crear Nuevo Producto">
+        <input class=" btn btn-dark crear" id="crear" type="submit" value="Crear Nuevo Producto">
 
     </form>
 </div>
