--- a/proyecto/static/css/inicio.css
+++ b/proyecto/static/css/inicio.css
@@ -1,7 +1,10 @@
 body {
     /*background: url("https://images.unsplash.com/photo-1495100497150-fe209c585f50?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=&fit=crop&w=1351&q=80") no-repeat center fixed;*/
-	background: url("https://images.unsplash.com/photo-1541689588306-8847082e1c1c?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=659&q=80")
+	/*background: url("https://images.unsplash.com/photo-1541689588306-8847082e1c1c?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&auto=format&fit=crop&w=659&q=80")*/
+	/*	no-repeat center fixed;*/
+    background: url("https://images.unsplash.com/photo-1493983947099-7780355d0c58?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=725&q=80")
 		no-repeat center fixed;
+
     background-size: cover;
 }
 
