--- a/proyecto/templates/ventas.html
+++ b/proyecto/templates/ventas.html
@@ -107,8 +107,7 @@
 
                     <input type="number" min="0" step="1" class="inputs" required
                            name="ventas" value="" id="ventas">
-                    <input type="hidden" name="referenciaVentas" value="{{referenciaVentas}}"><br><br>
-
+                    <input type="hidden" name="referenciaVentas" value="{{referenciaVentas}}"><br>
                     <button type="submit" class="btn btn-dark boton">Registrar Ventas</button>
 
 
