--- a/proyecto/static/css/productos.css
+++ b/proyecto/static/css/productos.css
@@ -178,9 +178,14 @@ body {
     text-align: center;
 }
 
+/*.overlay #ventas{*/
+/*    margin-bottom: 10%;*/
+/*}*/
+
+
 .overlay .boton {
     width: 125%;
-    /*margin-top: 3%;*/
+    margin-top: 2.5%;
     opacity: 70%;
     margin-left: -12.5%;
 }
@@ -197,22 +202,6 @@ body {
     font-style: italic;
     font-weight: normal;
     text-align: center;
-}
-
-
-/* pantalla pequeña */
-@media screen and (max-width: 1100px) {
-    img {
-        height: 100px;
-    }
-
-    #filtros a {
-        width: 25%;
-        margin: 2px;
-        font-size: 90%;
-    }
-
-
 }
 
 
@@ -255,9 +244,27 @@ input[type=number]::-webkit-inner-spin-button {
 }
 
 /*pantalla pequeña*/
+
+
+/* pantalla pequeña */
+@media screen and (max-width: 1100px) {
+    img {
+        height: 100px;
+    }
+
+    #filtros a {
+        width: 25%;
+        margin: 2px;
+        font-size: 90%;
+    }
+
+}
+
+
 @media screen and (max-width: 800px) {
     .datoProductoMiniatura {
         width: 60%; /* Full width */
     }
+
 }
 
